# rattrapageOpenGL

./: CMakeLists.txt  README.md  main.cpp  skybox.h
_assimp_loader/: assimp_loader.h
glm/detail/: func_common.inl
glsl/: base_fshader.glsl  base_vshader.glsl
